--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -4,7 +4,7 @@
   justify-content: center;
   align-items: center;
   font-size: 1.6rem;
-
+  font-weight: bold;
   padding: 30px 0;
   position: relative; /* Add this to make positioning the pseudo-elements easier */
   text-transform: uppercase;
