--- a/src/components/HeaderBar/HeaderBar.css
+++ b/src/components/HeaderBar/HeaderBar.css
@@ -1,6 +1,7 @@
 .headerbar {
   color: #333; /* Text color for the entire navigation bar */
   display: flex;
+  flex-wrap: wrap;
   justify-content: space-between;
   align-items: center;
   padding: 10px 20px;
@@ -39,6 +40,9 @@
   margin-right: 10px;
   cursor: pointer;
   font-size: 1.2rem;
+  cursor: pointer;
+  padding-right: 3px;
+  border-right: 1px solid #333;
 }
 
 /* Style the search icon (you may need to include a font icon library) */
