--- a/src/components/SingleHotNews/SingleHotNews.css
+++ b/src/components/SingleHotNews/SingleHotNews.css
@@ -1,6 +1,5 @@
 .singleHotNews {
   display: flex;
-  display: flex;
   flex-direction: column;
   flex-wrap: wrap;
 }
